# django-url-group-permissions

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
django_url_group_permissions/: __init__.py  admin.py  admin_group.py  apps.py  decorators.py  middleware.py
django_url_group_permissions/models/: models.py
django_url_permissions/: __init__.py  admin.py  apps.py  decorators.py  middleware.py
django_url_permissions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_url_permissions/migrations/: 0001_initial.py
django_url_permissions/models/: models.py
django_url_permissions/templates/admin/auth/group/: change_form.html
